--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: course2018
+name: course2019
 channels:
    - conda-forge
 dependencies:
@@ -10,3 +10,4 @@ dependencies:
    - pandas
    - cartopy
    - xarray
+   - seaborn
